# lydarr-py

./: .env.example  .gitignore  CLAUDE.md  README.md  anime.toml  lydarr.service  plan.md  pyproject.toml
modules/anilist/: http.py  search.py  types.py
modules/anilist/tests/: test_search.py
modules/animeschedule/: endpoints.py  episodes.py  http.py  models.py  schedule.py  season.py  types.py
modules/animeschedule/tests/: test_episodes.py  test_models.py  test_schedule.py  test_season.py
modules/nyaa/: categories.py  http.py  magnet.py  search.py  types.py
modules/nyaa/parser/: _utils.py  html.py  rss.py
modules/nyaa/tests/: test_categories.py  test_magnet.py  test_parser_html.py  test_parser_rss.py  test_search.py  test_types.py
src/lydarr/: __main__.py  config.py  file_manager.py  nyaa_search.py  torrent_client.py  tracker.py
src/lydarr/tests/: test_config.py  test_file_manager.py  test_nyaa_search.py  test_torrent_client.py  test_tracker.py  test_web_anime.py  test_web_daemon.py  test_web_torrents.py
src/lydarr/web/: app.py
src/lydarr/web/routes/: anime.py  daemon.py  torrents.py
src/lydarr/web/static/: index.html
